Update test.html: explained in description
-added a lang attribute to the html element
-added a src attribute to the script element
-added a href attribute to the link element

--- a/test/test.html
+++ b/test/test.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 // note: open https://taqi110913.github.io/taqi1109/test/test.html to run this html file
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8"/>
     <title>test.html</title>
-    <script type="text/javascript" src=""></script>
-    <link rel="stylesheet" type="text/css" href=""/>
+    <script type="text/javascript" src="javascript/test.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/test.css"/>
   </head>
   <body>
     <div id=logo>test.html</div>
