Fixed a bug in the html comment

--- a/test/test.html
+++ b/test/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-// note: open https://taqi110913.github.io/taqi1109/test/test.html to run this html file
+<!-- note: open https://taqi110913.github.io/taqi1109/test/test.html to run this html file -->
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
