Added semantic tags with part of the content

--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" type="text/css" href="css/test.css"/>
   </head>
   <body>
-    <div id=logo>test.html</div>
-    <hr/>
+    <header>
+      <div id=logo>test.html</div>
+      <hr/>
+    </header>
+    <nav>
+      <a href="#">Link 1</a>
+    </nav>
+    <main>
+      <p>Main</p>
+    </main>
+    <footer></footer>
   </body>
 </html>
