Renamed all instances of "test.html" to "taqi1109"

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>test.html</title>
+    <title>taqi1109</title>
     <script type="text/javascript" src="javascript/test.js"></script>
     <link rel="stylesheet" type="text/css" href="css/test.css"/>
   </head>
   <body>
     <header>
-      <div id=logo>test.html</div>
+      <div id=logo>taqi1109</div>
       <hr/>
     </header>
     <nav>
