--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
-<!-- note: open https://taqi110913.github.io/taqi1109/test/test.html to run this html file -->
+<!-- note: open https://taqi110913.github.io/taqi1109/index.html to run this html file -->
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
     <title>taqi1109</title>
     <script type="text/javascript" src="javascript/test.js"></script>
     <link rel="stylesheet" type="text/css" href="css/test.css"/>
+    <link rel="icon" type="image/x-icon" href="">
   </head>
   <body>
     <header>
