--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>taqi1109</title>
     <script type="text/javascript" src="javascript/test.js"></script>
     <link rel="stylesheet" type="text/css" href="css/test.css"/>
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
   <body>
     <header>
