--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8"/>
     <title>taqi1109</title>
-    <script type="text/javascript" src="javascript/test.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/test.css"/>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <script type="text/javascript" src="/javascript/test.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/test.css"/>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
     <header>
