Update index.html according to W3 Validator
https://validator.w3.org/nu/?doc=https%3A%2F%2Ftaqi110913.github.io%2Ftaqi1109%2F

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <!-- note: open https://taqi110913.github.io/taqi1109/index.html to run this html file -->
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8">
     <title>taqi1109</title>
-    <script type="text/javascript" src="/javascript/test.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/test.css"/>
+    <script src="/javascript/test.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/test.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
     <header>
       <div id=logo>taqi1109</div>
-      <hr/>
+      <hr>
     </header>
     <nav>
       <a href="#">Link 1</a>
