--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>taqi1109</title>
     <script src="/javascript/test.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/test.css">
-    <link rel="shortcut icon" href="/images/favicon.ico">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header>
