--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <head>
     <meta charset="utf-8">
     <title>taqi1109</title>
-    <script src="/javascript/test.js"></script><!--Javascript-->
-    <link rel="stylesheet" type="text/css" href="/css/test.css"><!--CSS-->
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/taqi110913/taqi1109/refs/heads/main/images/favicon.ico" type="image/x-icon"/><!--IE 10 and below Favicon-->
-    <!--IE 11, Chrome, Firefox, Safari, Opera Favicon-->
-    <link rel="icon" href="https://raw.githubusercontent.com/taqi110913/taqi1109/refs/heads/main/images/favicon.png" type="image/png">
-  </head> 
+    <script src="/javascript/test.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/test.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/images/favicon.png" type="image/png">
+  </head>
   <body>
     <header>
       <div id=logo>taqi1109</div>
