--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8">
     <title>taqi1109</title>
-    <script src="/javascript/test.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/test.css">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/images/favicon.png" type="image/png">
+    <script src="javascript/test.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/test.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.png" type="image/png">
   </head>
   <body>
     <header>
