--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-<!-- note: open https://taqi110913.github.io/taqi1109/index.html to run this html file -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -11,7 +10,8 @@
   </head>
   <body>
     <header>
-      <div id=logo>taqi1109</div>
+      <img src="images/logo.png" id="logo">
+      <h1>taqi1109</h1>
       <hr>
     </header>
     <nav>
