Update the links

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
       <h1>taqi1109</h1>
     </header>
     <nav>
-      <a href="#">Link 1</a>
+      <a href="#">Services</a>
+      <a href="#">Games</a>
+      <a href="#">About</a>
     </nav>
     <hr>
     <main>
       <p>Main</p>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="#">About</a>
+      <a href="#">Github</a>
+    </footer>
   </body>
 </html>
