Add the github link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
     <footer>
       <a href="#">About</a>
-      <a href="#">Github</a>
+      <a href="https://github.com/taqi110913/taqi1109">Github</a>
     </footer>
   </body>
 </html>
