Add Font Awesome

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>taqi1109</title>
     <script src="javascript/test.js"></script>
+    <script src="https://kit.fontawesome.com/6a6e7df713.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/test.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.png" type="image/png">
