Add Font Awesome icons

--- a/index.html
+++ b/index.html
@@ -15,17 +15,32 @@
       <h1>taqi1109</h1>
     </header>
     <nav>
-      <a href="#">Services</a>
-      <a href="#">Games</a>
-      <a href="#">About</a>
+      <a href="#">
+        <i class="fa-solid fa-screwdriver-wrench"></i>
+        Services
+      </a>
+      <a href="#">
+        <i class="fa-solid fa-gamepad"></i>
+        Games
+      </a>
+      <a href="#">
+        <i class="fa-solid fa-circle-info"></i>
+        About
+      </a>
     </nav>
     <hr>
     <main>
       <p>Main</p>
     </main>
     <footer>
-      <a href="#">About</a>
-      <a href="https://github.com/taqi110913/taqi1109">Github</a>
+      <a href="#">
+        <i class="fa-solid fa-circle-info"></i>
+        About
+      </a>
+      <a href="https://github.com/taqi110913/taqi1109">
+        <i class="fa-brands fa-github"></i>
+        Github
+      </a>
     </footer>
   </body>
 </html>
