--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>taqi1109</title>
-    <script src="javascript/test.js"></script>
+    <script src="javascript/main.js"></script>
     <script src="https://kit.fontawesome.com/6a6e7df713.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/test.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.png" type="image/png">
   </head>
