turn lists into buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>taqi1109</h1>
     </header>
     <nav>
-      <ul>
+      <ul class="button">
         <li>
           <a href="#">
             <i class="fa-solid fa-screwdriver-wrench"></i>
