Change the Font Awesome symbols into Google Fonts symbols
Signed-off-by: taqi1109 <taqiyuddin@khalifahschool.edu.my>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>taqi1109</title>
     <script src="javascript/main.js"></script>
-    <script src="https://kit.fontawesome.com/6a6e7df713.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.png" type="image/png">
@@ -18,19 +17,19 @@
       <ul class="button">
         <li>
           <a href="#">
-            <i class="fa-solid fa-screwdriver-wrench"></i>
+            <img src="images/toolssymbol.svg">
             Services
           </a>
         </li>
         <li>
           <a href="#">
-            <i class="fa-solid fa-gamepad"></i>
+            <img src="images/gamesymbol.svg">
             Games
           </a>
         </li>
         <li>
           <a href="#">
-            <i class="fa-solid fa-circle-info"></i>
+            <img src="images/infosymbol.svg">
             About
           </a>
         </li>
@@ -41,11 +40,11 @@
     </main>
     <footer>
       <a href="#">
-        <i class="fa-solid fa-circle-info"></i>
+        <img src="images/infosymbol.svg">
         About
       </a>
-      <a href="https://github.com/taqi110913/taqi1109">
-        <i class="fa-brands fa-github"></i>
+      <a href="https://github.com/taqi110913/taqiy">
+        <img src="images/githubsymbol.svg">
         Github
       </a>
     </footer>
