--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png" id="logo">
-      <h1>taqi1109</h1>
+      <a href="index.html">
+        <img src="images/logo.png" id="logo">
+        <h1>taqi1109</h1>
+      </a>
     </header>
     <nav>
       <ul class="button">
         <li>
           <a href="#">
-            <img src="images/toolssymbol.svg">
+            <img src="images/toolssymbol.svg" height="24" width="24">
             Services
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="images/gamesymbol.svg">
+            <img src="images/gamesymbol.svg" height="24" width="24">
             Games
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="images/infosymbol.svg">
+            <img src="images/infosymbol.svg" height="24" width="24">
             About
           </a>
         </li>
@@ -40,11 +42,11 @@
     </main>
     <footer>
       <a href="#">
-        <img src="images/infosymbol.svg">
+        <img src="images/infosymbol.svg" height="24" width="24">
         About
       </a>
       <a href="https://github.com/taqi110913/taqiy">
-        <img src="images/githubsymbol.svg">
+        <img src="images/githubsymbol.svg" height="24" width="24">
         Github
       </a>
     </footer>
