--- a/index.html
+++ b/index.html
@@ -18,15 +18,9 @@
     <nav>
       <ul class="button">
         <li>
-          <a href="#">
+          <a href="login/">
             <img src="images/toolssymbol.svg" height="24" width="24">
-            Services
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="images/gamesymbol.svg" height="24" width="24">
-            Games
+            Get Started
           </a>
         </li>
         <li>
